# painlessMeshManager

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  main.cpp  meshDetect.cpp  meshDetect.hpp  painless-mesh-manager
cppcodec/cppcodec/: base32_crockford.hpp  base32_default_crockford.hpp  base32_default_hex.hpp  base32_default_rfc4648.hpp  base32_hex.hpp  base32_rfc4648.hpp  base64_default_rfc4648.hpp  base64_default_url.hpp  base64_default_url_unpadded.hpp  base64_rfc4648.hpp  base64_url.hpp  base64_url_unpadded.hpp  hex_default_lower.hpp  hex_default_upper.hpp  hex_lower.hpp  hex_upper.hpp
cppcodec/cppcodec/data/: raw_result_buffer.hpp
cppcodec/cppcodec/detail/: base32.hpp  base64.hpp  codec.hpp  hex.hpp  stream_codec.hpp
cppcodec/test/: test_cppcodec.cpp
cppcodec/tool/: base32dec.cpp  base32enc.cpp  base64dec.cpp  base64enc.cpp  helloworld.cpp  hexdec.cpp  hexenc.cpp
src/: CMakeLists.txt  client.cpp  client.hpp  clientOTA.cpp  clientTime.cpp  main.cpp  meshDetect.cpp
web/: if.html  index.html  main.js
